refactor fiscal_code with fiscalcode, changed docker image and others fixes
